# LBS-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DataBaseSchema.SQL  Dockerfile  LBS-Endpoints.postman_collection.json  README.md  app.py  config.py  docker-compose.yml  requirements.txt  ruff.toml  scripttorun.txt  test_backup.sql
.github/workflows/: api_tests.yml  docker-image.yml  lint.yml
Collections/: LBS-Endpoints.postman_collection.json  collection.json  environment.json
LBS/: Dockerfile  app.py  pyproject.toml
LBS/main/: DataObjects.py  __init__.py
LBS/main/auth/: auth_guard.py  auth_provider.py  jwt_handler.py
LBS/main/controller/: admin_route.py  device_route.py  gsm_cell.py  location.py  wifi_network.py
LBS/main/model/: models.py
LBS/main/schemas/: DataBaseSchema.SQL
LBS/main/service/: admin_service.py  device_service.py  gsm_service.py  wifi_service.py
LBS/main/utils/: data_objects.py  data_validator.py  logger.py  route_information.py
LBS/nginx/: nginx.conf
app/: app.py
app/main/: DataObjects.py  __init__.py
app/main/controller/: admin_route.py  gsm_cell.py  location.py  wifi_network.py
app/main/location/: triangulation.py
app/main/model/: models.py
app/main/schemas/: DataBaseSchema.SQL
app/main/service/: admin_service.py  gsm_service.py  wifi_service.py
app/main/utils/: data_validator.py
app/template/: exampleRequestData.txt
src/: app.py  models.py  requirements.txt
