[tool.poetry]
name = "lbs server"
version = "0.1.0"
description = ""
authors = ["Suwi-inc <suwilanjisilwamba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
blinker = "1.7.0"
click = "8.1.7"
colorama = "0.4.6"
flask = "3.0.2"
flask-migrate = "4.0.7"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
mako = "1.3.3"
markupsafe = "2.1.5"
psycopg2-binary = "2.9.9"
sqlalchemy = "2.0.29"
typing-extensions = "4.11.0"
werkzeug = "3.0.2"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
